backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-dev-app
  labels:
    app: super-dev-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: super-dev-app
